# data5006-data-analysis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  Tiny_Data_Analysis_Disney+.ipynb  Tiny_Data_Analysis_Disney+.py  cast_graph_positions.json  disney_plus_titles.csv  pyproject.toml  requirements.txt
